# qt-test

./: CMakeLists.txt  Main.qml  apptranslate_cn.ts  apptranslate_en.ts  main.cpp  messageprovider.cpp  messageprovider.h
